# faceMe

./: .gitignore  AGENTS.md  MODEL_SETUP.md  README.md  setup_models.sh
.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
docs/: PROGRESS.md  ProcessChecklist.md  SoftReq&Goals.md  TechStack.md
slfam/: Cargo.toml  config.example.toml
slfam/src/: config.rs  error.rs  lib.rs
slfam/src/camera/: device.rs  frame.rs  mock.rs  mod.rs  v4l2.rs
slfam/src/crypto/: keys.rs  mod.rs  xchacha.rs
slfam/src/detection/: alignment.rs  landmarks.rs  mod.rs  onnx.rs  retinaface.rs
slfam/src/embedding/: mobilefacenet.rs  mod.rs
slfam/src/liveness/: blink.rs  ir.rs  lbp.rs  mod.rs  optical_flow.rs
slfam/src/matching/: mod.rs
slfam/src/pam/: conversation.rs  handler.rs  mod.rs
slfam/src/template/: mod.rs  storage.rs
